# homework-for-cpl

./: README.md
CPL/: CMakeLists.txt
CPL/0-intro/: CMakeLists.txt  homework1.c  homework2.c  note1.c
CPL/1-types-io/: CMakeLists.txt  admin-scanf.c  admin.c  circle.c  homeworkA.c  homeworkB.c  homeworkC.c  homeworkD.c  homeworkE.c  homeworkF.c  homeworkG.c  homeworkH.c  mol.c  sphere.c
CPL/10-double-pointers/: CMakeLists.txt  note10.c
CPL/11-struct/: CMakeLists.txt  datas.md  homework10A.c  homework10B.c  homework10C.c  homework10D.c  note11.c
CPL/12-linked-list/: CMakeLists.txt  note12.c
CPL/2-if-for-array/: CMakeLists.txt  division-9.c  homework2A.c  homework2B.c  homework2C.c  homework2D.c  homework2E.c  homework2F.c  note.c  pp2.c
CPL/3-for-a-while/: CMakeLists.txt  homework3A.c  homework3B.c  homework3C.c  homework3D.c  homework3E.c  homework3F.c  note.c  pp3-1.c  pp3.c
CPL/4-loops/: CMakeLists.txt  homework4A.c  homework4B.c  homework4C.c  homework4D.c  homework4E.c  note.c
CPL/5-function/: CMakeLists.txt  homework5A.c  homework5B.c  homework5C.c  homework5D.c  homework5E.c  homework5F.c  note.c
CPL/6-recursion/: CMakeLists.txt  homework6A.c  homework6B.c  homework6C.c  homework6D.c  homework6E.c  homework6F.c  note.c
CPL/7-recursionData/: CMakeLists.txt  homework7A.c  homework7B.c  homework7C.c  homework7D.c  homework7E-model.c  homework7E.c  homework7F.c  note.c
CPL/8-pointers/: CMakeLists.txt  homework8A.c  homework8B.c  homework8C.c  note8.c
CPL/9-pointer-more/: CMakeLists.txt  homework9A.c  homework9B.c  homework9C.c  note-9.c  numbers  test9.c
CPL/Problem-Set/: 11-Linkedlist.c  11-Linkedlist_Stack_Pour.c  11-stack_pour.c  CMakeLists.txt
CPL/Project-1/: CMakeLists.txt  calculator.c  numbers  project1-test-data.md  test-1.c
CPL/computer_base/: 6.18.c  6.19.c  6.20.c  7.17.c  CMakeLists.txt
CPL/homework_outside/: CMakeLists.txt  Herman.c  ISBN_number.c  for-SE.c  homeworkoutside1.c  homeworkoutside2.c  homeworkoutside3.c
CPL/sort/: CMakeLists.txt  bubble_sort.c  insertion_sort.c  merge_sort.c  selection_sort.c
