cmake_minimum_required(VERSION 3.23)
project(CPL C)

set(CMAKE_C_STANDARD 11)

add_subdirectory(Problem-Set)
add_subdirectory(Project-1)
add_subdirectory(computer_base)
add_subdirectory(homework_outside)
add_subdirectory(0-intro)
add_subdirectory(1-types-io)
add_subdirectory(2-if-for-array)
add_subdirectory(3-for-a-while)
add_subdirectory(4-loops)
add_subdirectory(5-function)
add_subdirectory(6-recursion)
add_subdirectory(7-recursionData)
add_subdirectory(8-pointers)
add_subdirectory(9-pointer-more)
add_subdirectory(10-double-pointers)
add_subdirectory(11-struct)
add_subdirectory(12-linked-list)
add_subdirectory(ramfs)
add_subdirectory(sort)
