add_executable(sphere sphere.c)

target_link_libraries(sphere m)

add_executable(admin admin.c)
target_link_libraries(admin m)

add_executable(admin-scanf admin-scanf.c)
target_link_libraries(admin-scanf m)

add_executable(homeworkA homeworkA.c)

add_executable(homeworkC homeworkC.c)

add_executable(homeworkB homeworkB.c)
target_link_libraries(homeworkB m)

add_executable(homeworkD homeworkD.c)

add_executable(homeworkE homeworkE.c)

add_executable(homeworkF homeworkF.c)

add_executable(homeworkG homeworkG.c)

add_executable(homeworkH homeworkH.c)
target_link_libraries(homeworkH m)
