add_executable(note note.c)
add_executable(homework2D homework2D.c)
add_executable(homework2B homework2B.c)
add_executable(homework2A homework2A.c)
add_executable(homework2C homework2C.c)
target_link_libraries(homework2C m)
add_executable(homework2E homework2E.c)
target_link_libraries(homework2E m)
add_executable(homework2F homework2F.c)
add_executable(pp2 pp2.c)
target_link_libraries(pp2 m)
add_executable(division-9 division-9.c)
